package seedu.stockpal.common;

public interface CommandParameter {
    boolean isNull();
}
